Add redirect_from yaml header

--- a/_posts/2011-01-11-why.html.markdown
+++ b/_posts/2011-01-11-why.html.markdown
@@ -1,11 +1,11 @@
---- 
+---
 layout: post
 title: Why?
 tags: []
-
 status: publish
 type: post
 published: true
+redirect_from: "/blog/2011/01/11/why.html"
 ---
 It would have been next to impossible to get to the point in my iPhone development that I am today without the humble guidance of small development studio blogs.
 
