--- a/_posts/2011-07-30-hosting.html.markdown
+++ b/_posts/2011-07-30-hosting.html.markdown
@@ -1,7 +1,7 @@
---- 
+---
 layout: post
 title: Hosting
-tags: 
+tags:
 - Commentary
 - hosting
 - Rails
@@ -9,6 +9,7 @@ tags:
 status: publish
 type: post
 published: true
+redirect_from: "/blog/2011/07/30/hosting.html"
 ---
 My rent on my shared garbage VPS is up in early August and I'm not sure what to do. I've got two problems and a number of routes I could go.
 
