--- a/_posts/2012-10-08-tdd.markdown
+++ b/_posts/2012-10-08-tdd.markdown
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: "TDD, RSpec & Conway's Game of Life"
+title: TDD, RSpec & Conway's Game of Life
 date: 2012-10-08 21:22
 comments: true
 categories: 
+redirect_from: "/blog/2012/10/08/tdd"
 ---
 
 On my continuing quest to do more micro-projects, I decided to begin focusing on TDD today. After doing a little RSpec Googling, I came across [this live coding](https://vimeo.com/31403388) video for doing TDD with RSpec on [Conway's Game of Life](http://en.wikipedia.org/wiki/Conway's_Game_of_Life), something I hadn't heard of before.
