--- a/_posts/2012-03-11-new-home.markdown
+++ b/_posts/2012-03-11-new-home.markdown
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: "New Home"
+title: New Home
 date: 2012-03-11 15:28
 comments: true
 categories: 
+redirect_from: "/blog/2012/03/11/new-home"
 ---
 
 This is my first post on the github servers.
