--- a/_posts/2012-03-11-new-home.markdown
+++ b/_posts/2012-03-11-new-home.markdown
@@ -3,7 +3,7 @@ layout: post
 title: New Home
 date: 2012-03-11 15:28
 comments: true
-categories: 
+tags: blog
 redirect_from: "/blog/2012/03/11/new-home/"
 ---
 
