--- a/_posts/2012-10-08-tdd.markdown
+++ b/_posts/2012-10-08-tdd.markdown
@@ -3,7 +3,7 @@ layout: post
 title: TDD, RSpec & Conway's Game of Life
 date: 2012-10-08 21:22
 comments: true
-categories: 
+tags: commentary
 redirect_from: "/blog/2012/10/08/tdd/"
 ---
 
